<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dudu.droidcafeaddinputcontrl.MainActivity">
    <!--<item android:id="@+id/action_settings"-->
    <!--android:title="@string/action_settings"-->
    <!--android:orderInCategory="100"-->
    <!--app:showAsAction="never"/>-->

    <item
        android:id="@+id/action_order"
        android:orderInCategory="10"
        android:title="@string/action_order"
        app:showAsAction="always"
        android:icon="@drawable/ic_shopping_cart"/>

    <item android:id="@+id/action_status"
        android:title="@string/action_status"
        android:orderInCategory="20"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_status"/>

    <item android:id="@+id/action_favorites"
        android:title="@string/action_favorites"
        android:orderInCategory="30"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_favorites"/>

    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/action_contact"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_context"
        android:orderInCategory="100"
        android:title="@string/action_context"
        app:showAsAction="never" />

</menu>
